--- a/blogs/information_security/rev/soot/index.html
+++ b/blogs/information_security/rev/soot/index.html
@@ -13108,8 +13108,7 @@ div#notebook {
 <div class="cell border-box-sizing text_cell rendered"><div class="prompt input_prompt">
 </div><div class="inner_cell">
 <div class="text_cell_render border-box-sizing rendered_html">
-<hr />
-<h2 id="title:-%E6%95%B0%E6%8D%AE%E6%B5%81%E5%88%86%E6%9E%90">title: &#25968;&#25454;&#27969;&#20998;&#26512;<a class="anchor-link" href="#title:-%E6%95%B0%E6%8D%AE%E6%B5%81%E5%88%86%E6%9E%90">&#182;</a></h2><p>数据流分析即分析变量在程序中是如何定义或使用的。</p>
+<h1 id="%E6%95%B0%E6%8D%AE%E6%B5%81%E5%88%86%E6%9E%90">&#25968;&#25454;&#27969;&#20998;&#26512;<a class="anchor-link" href="#%E6%95%B0%E6%8D%AE%E6%B5%81%E5%88%86%E6%9E%90">&#182;</a></h1><p>数据流分析即分析变量在程序中是如何定义或使用的。</p>
 <p>参考：<a href="https://github.com/soot-oss/soot/wiki/Implementing-an-intra-procedural-data-flow-analysis-in-Soot">https://github.com/soot-oss/soot/wiki/Implementing-an-intra-procedural-data-flow-analysis-in-Soot</a></p>
 <p><a href="https://en.wikipedia.org/wiki/Data-flow_analysis">https://en.wikipedia.org/wiki/Data-flow_analysis</a></p>
 
