--- a/blogs/friends.html
+++ b/blogs/friends.html
@@ -32,7 +32,7 @@
     <li><a href="friends.html"><span class="ax-name">友链</span></a></li>
     </ul>
     <hr>
-    <div style="text-align: left;"> <ul class="ax-menu ax-full" axMenu><li><a>信息安全</a><ul class="ax-menu ax-full" axMenu><li><a href=https://h3a.moe><p>h3arn	dalao</p></a></li></ul></li></ul> </div>
+    <div style="text-align: left;"> <ul class="ax-menu ax-full" axMenu><li><a>信息安全</a><ul class="ax-menu ax-full" axMenu><ul class="ax-menu ax-full" axMenu><a>全能型选手</a><li><a href=https://h3a.moe><p>h3arn	dalao</p></a></li></ul></ul></li><ul class="ax-menu ax-full" axMenu><a>其它</a><li><a href=https://cubercsl.site/><p>cubercsl	all dalao</p></a></li></ul></ul> </div>
     <div class="ax-footer">
         <div class="ax-row ax-split">
             <div class="ax-col ax-operate">
