tsblog auto commit

--- a/blogs/about.html
+++ b/blogs/about.html
@@ -23,15 +23,30 @@
 <body style="max-width: 1000px;text-align: center;margin-left: auto; margin-right: auto;">
     <!--顶栏-->
     <!--头像-->
-    <a class="ax-avatar ax-xxs" style="background-image: url('../icons/avatr.jpg')"></a>
-    <ul class="ax-menu ax-menu-light " axMenu data-row="true">
+    <header class="ax-header">
+        <div class="ax-row" style="text-align:left;  max-width: 1000px;margin-left: auto; margin-right: auto;">
+            <!-- <a href="###" class="ax-open ax-iconfont ax-icon-menu"></a><a href="###" class="ax-open ax-iconfont ax-icon-cart"></a><span class="ax-open"></span> -->
+            <div class="ax-col"><a href="index.html" class="ax-logo"><img src=""/></a></div>
+            <div class="ax-nav">
+                <span class="ax-btns"><a href="" class="ax-iconfont" style="background-image: url(icons/avatr.jpg);"></a></span>
+                <div class="ax-item"><a href="index.html" class="ax-text">首页</a><span class="ax-line"></span></div>
+                <div class="ax-item"><a href="category.html" class="ax-text">分类</a><span class="ax-line"></span></div>
+                <div class="ax-item"><a href="about.html" class="ax-text">关于</a><span class="ax-line"></span></div>
+                <div class="ax-item "><a href="friends.html" class="ax-text">友链</a><span class="ax-line"></span></div>
+                <div class="ax-item" ><span class="ax-tag">我想做一个温柔耐心的强者</span></div>
+            </div>
+        </div>
+    </header>
+    <div class="ax-space-header"></div>
+    <!-- <a class="ax-avatar ax-xxs" style="background-image: url('../icons/avatr.jpg')"></a> -->
+    <!-- <ul class="ax-menu ax-menu-light " axMenu data-row="true">
 
     <li><a href="index.html"><span class="ax-name">首页</span></a></li>
     <li><a href="category.html"><span class="ax-name">分类</span></a></li>
     <li><a href="about.html"><span class="ax-name">关于</span></a></li>
     <li><a href="friends.html"><span class="ax-name">友链</span></a></li>
-    </ul>
-    <hr>
+    </ul> -->
+    <!-- <hr> -->
     <div style="text-align: left;"> <img src=><p>This is TongShuai's blog</p> </div>
     <div class="ax-footer">
         <div class="ax-row ax-split">
