--- a/blogs/about.html
+++ b/blogs/about.html
@@ -6,54 +6,40 @@
     <meta name="viewport" content="width=device-width,initial-scale=1.0,maximum-scale=1.0,user-scalable=no" />
     <meta name="apple-mobile-web-app-capable" content="yes" />
     <meta name="apple-mobile-web-app-status-bar-style" content="black" />
-    <meta name="apple-touch-fullscreen" content="yes"/>
+    <meta name="apple-touch-fullscreen" content="yes" />
     <meta name="format-detection" content="email=no" />
-    <meta name="wap-font-scale"  content="no" />
+    <meta name="wap-font-scale" content="no" />
     <meta name="viewport" content="user-scalable=no, width=device-width" />
     <meta content="telephone=no" name="format-detection" />
     <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
     <meta name="keywords" content="Blog,Information Security,Fit,Life" />
     <meta name="description" content="This is TongShai's Blog, love life, love information security" />
     <link rel="shortcut icon" href="../icons/qireshark.svg" type="image/x-icon">
-    <link href="https://src.axui.cn/v2.0/dist/css/ax.css" rel="stylesheet" type="text/css" >
-    <link href="https://src.axui.cn/v2.0/dist/css/ax-response.css" rel="stylesheet" type="text/css" >
+    <link href="https://src.axui.cn/v2.0/dist/css/ax.css" rel="stylesheet" type="text/css">
+    <link href="https://src.axui.cn/v2.0/dist/css/ax-response.css" rel="stylesheet" type="text/css">
     <meta name="google-site-verification" content="hQarfW6Kw3N1zAJam3szvQ_xGkchpL0ol1UCBBqM0OU" />
 </head>
 
 <body style="max-width: 1000px;text-align: center;margin-left: auto; margin-right: auto;">
-    <!--顶栏-->
-    <!--头像-->
-    <header class="ax-header">
-        <div class="ax-row" style="text-align:left;  max-width: 1000px;margin-left: auto; margin-right: auto;">
-            <!-- <a href="###" class="ax-open ax-iconfont ax-icon-menu"></a><a href="###" class="ax-open ax-iconfont ax-icon-cart"></a><span class="ax-open"></span> -->
-            <div class="ax-col"><a href="index.html" class="ax-logo"><img src=""/></a></div>
-            <div class="ax-nav">
-                <span class="ax-btns"><a href="" class="ax-iconfont" style="background-image: url(icons/avatr.jpg);"></a></span>
-                <div class="ax-item"><a href="index.html" class="ax-text">首页</a><span class="ax-line"></span></div>
-                <div class="ax-item"><a href="category.html" class="ax-text">分类</a><span class="ax-line"></span></div>
-                <div class="ax-item"><a href="about.html" class="ax-text">关于</a><span class="ax-line"></span></div>
-                <div class="ax-item "><a href="friends.html" class="ax-text">友链</a><span class="ax-line"></span></div>
-                <div class="ax-item" ><span class="ax-tag">我想做一个温柔耐心的强者</span></div>
-            </div>
-        </div>
-    </header>
-    <div class="ax-space-header"></div>
-    <!-- <a class="ax-avatar ax-xxs" style="background-image: url('../icons/avatr.jpg')"></a> -->
-    <!-- <ul class="ax-menu ax-menu-light " axMenu data-row="true">
 
-    <li><a href="index.html"><span class="ax-name">首页</span></a></li>
-    <li><a href="category.html"><span class="ax-name">分类</span></a></li>
-    <li><a href="about.html"><span class="ax-name">关于</span></a></li>
-    <li><a href="friends.html"><span class="ax-name">友链</span></a></li>
-    </ul> -->
-    <!-- <hr> -->
+    <a class="ax-avatar ax-xxs" style="background-image: url('../icons/avatr.jpg')"></a>
+    <ul class="ax-menu ax-menu-light " axMenu data-row="true">
+
+        <li><a href="index.html"><span class="ax-name">首页</span></a></li>
+        <li><a href="category.html"><span class="ax-name">分类</span></a></li>
+        <li><a href="about.html"><span class="ax-name">关于</span></a></li>
+        <li><a href="friends.html"><span class="ax-name">友链</span></a></li>
+    </ul>
+    <hr>
     <div style="text-align: left;"> <img src=><p>This is TongShuai's blog</p> </div>
     <div class="ax-footer">
         <div class="ax-row ax-split">
+            <div><div class="ax-tag">我想做一个温柔耐心的强者</div></div>
             <div class="ax-col ax-operate">
                 <a href="mailto:tommpat163@163.com">Email to me!</a>
             </div>
-            <div class="ax-copyright">Powered by <a href="https://github.com/TomQunChao/tsblog">Tiny Small Blog</a></div>
+            <div class="ax-copyright">Powered by <a href="https://github.com/TomQunChao/tsblog">Tiny Small Blog</a>
+            </div>
         </div>
     </div>
     <script src="https://src.axui.cn/v2.0/dist/js/ax.min.js" type="text/javascript" charset="utf-8"></script>
