tsblog auto commit

--- a/blogs/friends.html
+++ b/blogs/friends.html
@@ -32,6 +32,7 @@
     </ul>
     <hr>
     <div style="text-align: left;"> <ul class="ax-menu ax-full" axMenu><li><a>信息安全</a><ul class="ax-menu ax-full" axMenu><li><a>全能型选手</a><ul class="ax-menu ax-full" axMenu><li><a href=https://h3a.moe><p><b>h3arn</b>	"<i>我會常記先生好，我會常想南山幽。</i>"</p></a></li></ul></li></ul></li><li><a>其它</a><ul class="ax-menu ax-full" axMenu><li><a href=https://cubercsl.site/><p><b>cubercsl</b>	"<i>all dalao</i>"</p></a></li></ul></li></ul> </div>
+    <ul class="ax-backtop"><li class="ax-item ax-totop"><a class="ax-iconfont ax-icon-totop"></a></li></ul>
     <div class="ax-footer">
         <div class="ax-row ax-split">
             <div><div class="ax-tag">我想做一个温柔耐心的强者</div></div>
