--- a/template.html
+++ b/template.html
@@ -32,6 +32,7 @@
     </ul>
     <hr>
     <div style="text-align: left;"> {{ content }} </div>
+    <ul class="ax-backtop"><li class="ax-item ax-totop"><a class="ax-iconfont ax-icon-totop"></a></li></ul>
     <div class="ax-footer">
         <div class="ax-row ax-split">
             <div><div class="ax-tag">我想做一个温柔耐心的强者</div></div>
