--- a/template.html
+++ b/template.html
@@ -23,8 +23,7 @@
 <body style="max-width: 1000px;text-align: center;margin-left: auto; margin-right: auto;">
 
     <ul class="ax-menu ax-menu-light " axMenu data-row="true">
-
-        <a class="ax-avatar ax-xxs" style="background-image: url('../icons/avatr.jpg')"></a>
+        <li><a class="ax-avatar" href="index.html" style="background-image: url('../icons/avatr.jpg')"></a></li>
         <li><a href="index.html"><span class="ax-name">首页</span></a></li>
         <li><a href="category.html"><span class="ax-name">分类</span></a></li>
         <li><a href="about.html"><span class="ax-name">关于</span></a></li>
@@ -36,6 +35,7 @@
     <div class="ax-footer">
         <div class="ax-row ax-split">
             <div><div class="ax-tag">我想做一个温柔耐心的强者</div></div>
+            <div><a href="https://github.com/TomQunChao"><span class="ax-name">Github</span></a></div>
             <div class="ax-col ax-operate">
                 <a href="mailto:tommpat163@163.com">Email to me!</a>
             </div>
