tsblog auto commit

--- a/blogs/ai/survey/index.html
+++ b/blogs/ai/survey/index.html
@@ -13124,6 +13124,16 @@ div#notebook {
 <li>非对比学习：只有正例，学习如何分类正例</li>
 </ul>
 <p>注意力负采样，课程学习</p>
+<h2 id="RNN">RNN<a class="anchor-link" href="#RNN">&#182;</a></h2><p>隐层中$h(t)$除了学习$x(t)$之外，还学习$h(t-1)$</p>
+<p><img src="img/20221117112622.png" alt="" /></p>
+<p>LSTM</p>
+<p><img src="img/20221117113624.png" alt="" /></p>
+<p><img src="img/20221117113647.png" alt="" /></p>
+<p>门控也是可以学习的，</p>
+<p><img src="img/20221117113804.png" alt="" /></p>
+<p><img src="img/20221117113823.png" alt="" /></p>
+<p>状态、输出、输入都可以被门控制，输入门控制输入，输出门控制输出，遗忘门控制状态的自循环</p>
+<h2 id="%E7%BC%96%E7%A0%81%E3%80%81%E8%A7%A3%E7%A0%81%E5%99%A8">&#32534;&#30721;&#12289;&#35299;&#30721;&#22120;<a class="anchor-link" href="#%E7%BC%96%E7%A0%81%E3%80%81%E8%A7%A3%E7%A0%81%E5%99%A8">&#182;</a></h2><h2 id="GCN%E4%B8%AD%E7%9F%A9%E9%98%B5%E7%9A%84%E5%AF%B9%E7%A7%B0%E5%BD%92%E4%B8%80%E5%8C%96">GCN&#20013;&#30697;&#38453;&#30340;&#23545;&#31216;&#24402;&#19968;&#21270;<a class="anchor-link" href="#GCN%E4%B8%AD%E7%9F%A9%E9%98%B5%E7%9A%84%E5%AF%B9%E7%A7%B0%E5%BD%92%E4%B8%80%E5%8C%96">&#182;</a></h2><p><a href="https://zhuanlan.zhihu.com/p/412337460">https://zhuanlan.zhihu.com/p/412337460</a></p>
 <h2 id="%E5%8F%82%E8%80%83">&#21442;&#32771;<a class="anchor-link" href="#%E5%8F%82%E8%80%83">&#182;</a></h2><p><a href="https://optimization.cbe.cornell.edu/index.php?title=Main_Page">https://optimization.cbe.cornell.edu/index.php?title=Main_Page</a></p>
 
 </div>
