--- a/template.html
+++ b/template.html
@@ -20,9 +20,8 @@
     <meta name="google-site-verification" content="hQarfW6Kw3N1zAJam3szvQ_xGkchpL0ol1UCBBqM0OU" />
 </head>
 
-<body style="max-width: 1000px;text-align: center;margin-left: auto; margin-right: auto;">
-
-    <ul class="ax-menu ax-menu-light " axMenu data-row="true">
+<body style="max-width: 1000px;margin-left: auto; margin-right: auto;">
+    <ul class="ax-menu ax-menu-light" axMenu="row:true">
         <li><a class="ax-avatar" href="index.html" style="background-image: url('../icons/avatr.jpg')"></a></li>
         <li><a href="index.html"><span class="ax-name">首页</span></a></li>
         <li><a href="category.html"><span class="ax-name">分类</span></a></li>
@@ -37,6 +36,7 @@
             <div><div class="ax-tag">我想做一个温柔耐心的强者</div></div>
             <div><a href="https://github.com/TomQunChao"><span class="ax-name">Github</span></a></div>
             <div class="ax-col ax-operate">
+                <p>   </p>
                 <a href="mailto:tommpat163@163.com">Email to me!</a>
             </div>
             <div class="ax-copyright">Powered by <a href="https://github.com/TomQunChao/tsblog">Tiny Small Blog</a>
