tsblog auto commit

--- a/blogs/life/reading/战争与和平/index.html
+++ b/blogs/life/reading/战争与和平/index.html
@@ -13108,7 +13108,11 @@ div#notebook {
 <div class="cell border-box-sizing text_cell rendered"><div class="prompt input_prompt">
 </div><div class="inner_cell">
 <div class="text_cell_render border-box-sizing rendered_html">
-<h1 id="%E3%80%8A%E6%88%98%E4%BA%89%E4%B8%8E%E5%92%8C%E5%B9%B3%E3%80%8B%E8%AF%BB%E4%B9%A6%E7%AC%94%E8%AE%B0">&#12298;&#25112;&#20105;&#19982;&#21644;&#24179;&#12299;&#35835;&#20070;&#31508;&#35760;<a class="anchor-link" href="#%E3%80%8A%E6%88%98%E4%BA%89%E4%B8%8E%E5%92%8C%E5%B9%B3%E3%80%8B%E8%AF%BB%E4%B9%A6%E7%AC%94%E8%AE%B0">&#182;</a></h1><h2 id="%E7%AC%AC%E4%BA%8C%E5%86%8C">&#31532;&#20108;&#20876;<a class="anchor-link" href="#%E7%AC%AC%E4%BA%8C%E5%86%8C">&#182;</a></h2><h3 id="%E7%AC%AC%E4%B8%89%E9%83%A8">&#31532;&#19977;&#37096;<a class="anchor-link" href="#%E7%AC%AC%E4%B8%89%E9%83%A8">&#182;</a></h3><h4 id="%E4%BA%94%E3%80%81">&#20116;&#12289;<a class="anchor-link" href="#%E4%BA%94%E3%80%81">&#182;</a></h4>
+<h1 id="%E3%80%8A%E6%88%98%E4%BA%89%E4%B8%8E%E5%92%8C%E5%B9%B3%E3%80%8B%E8%AF%BB%E4%B9%A6%E7%AC%94%E8%AE%B0">&#12298;&#25112;&#20105;&#19982;&#21644;&#24179;&#12299;&#35835;&#20070;&#31508;&#35760;<a class="anchor-link" href="#%E3%80%8A%E6%88%98%E4%BA%89%E4%B8%8E%E5%92%8C%E5%B9%B3%E3%80%8B%E8%AF%BB%E4%B9%A6%E7%AC%94%E8%AE%B0">&#182;</a></h1><h2 id="%E7%AC%AC%E4%B8%80%E5%86%8C">&#31532;&#19968;&#20876;<a class="anchor-link" href="#%E7%AC%AC%E4%B8%80%E5%86%8C">&#182;</a></h2><h2 id="%E7%AC%AC%E4%BA%8C%E5%86%8C">&#31532;&#20108;&#20876;<a class="anchor-link" href="#%E7%AC%AC%E4%BA%8C%E5%86%8C">&#182;</a></h2><h3 id="%E7%AC%AC%E4%B8%89%E9%83%A8">&#31532;&#19977;&#37096;<a class="anchor-link" href="#%E7%AC%AC%E4%B8%89%E9%83%A8">&#182;</a></h3><h4 id="%E4%B8%89%E3%80%81%E5%9B%9B%E3%80%81%E4%BA%94%E3%80%81%E5%85%AD">&#19977;&#12289;&#22235;&#12289;&#20116;&#12289;&#20845;<a class="anchor-link" href="#%E4%B8%89%E3%80%81%E5%9B%9B%E3%80%81%E4%BA%94%E3%80%81%E5%85%AD">&#182;</a></h4><p>因为安德烈公爵参军之后，被法军俘虏，导致妻子生产时无法及时赶到，无法照顾妻子，妻子因为难产而亡。他也因此备受打击，只做一些对“自己人”有用的事情，因为他不想再等“自己人”失去之后再珍惜。所以安德烈公爵和皮埃尔在游船上谈论时，安德烈公爵并没有对于皮埃尔的观点表示同意，但是这次谈论给他的心里埋下了改变的种子。之后他主动改革自己的庄园，解放农奴。</p>
+<p>安德烈公爵认识了俄国改革的主力--斯佩兰斯，并且对他有一种个人崇拜的感情在里面，无论是对于他的言谈举止，还是说外貌，安德烈公爵都认为他应该是本次改革的人。</p>
+<p>同时斯佩兰斯也对安德烈公爵有好感，因为他在自己的庄园改革时取得了一定成就，可以作为范例；并且安德烈公爵听从老安德烈的建议，不利用自己的特权。两人详谈甚欢。</p>
+<p>但是个人似乎不太喜欢斯佩兰斯，感觉这个人有点故作高冷。细想之下可能也有合理性吧，如果一下把底牌都亮出来了，那筹码就没了？</p>
+
 </div>
 </div>
 </div>
