--- a/blogs/development/protocol/webhook/note.md.html
+++ b/blogs/development/protocol/webhook/note.md.html
@@ -3,7 +3,7 @@
 <head><meta charset="utf-8" />
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
-<title>nF0aYRgcBp</title><script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/2.0.3/jquery.min.js"></script><script src="https://cdnjs.cloudflare.com/ajax/libs/require.js/2.1.10/require.min.js"></script>
+<title>P78kAQ8Pkp</title><script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/2.0.3/jquery.min.js"></script><script src="https://cdnjs.cloudflare.com/ajax/libs/require.js/2.1.10/require.min.js"></script>
 
 <style type="text/css">
   pre { line-height: 125%; }
@@ -13108,7 +13108,11 @@ div#notebook {
 <div class="cell border-box-sizing text_cell rendered"><div class="prompt input_prompt">
 </div><div class="inner_cell">
 <div class="text_cell_render border-box-sizing rendered_html">
-<h1 id="Webhook%E5%AD%A6%E4%B9%A0">Webhook&#23398;&#20064;<a class="anchor-link" href="#Webhook%E5%AD%A6%E4%B9%A0">&#182;</a></h1>
+<h1 id="Webhook%E5%AD%A6%E4%B9%A0">Webhook&#23398;&#20064;<a class="anchor-link" href="#Webhook%E5%AD%A6%E4%B9%A0">&#182;</a></h1><p>是异步编程模型的一种实现，一端订阅事件并执行动作，一端触发事件</p>
+<p>拿Github和Jenkins CI为例，Github包含很多动作，例如push、issue、comment等，如果已经订阅，则动作触发时会通知Jenkins CI，Jenkins CI执行相应动作</p>
+<p>这种机制可用于前端自动化构建</p>
+<h2 id="%E5%8F%82%E8%80%83">&#21442;&#32771;<a class="anchor-link" href="#%E5%8F%82%E8%80%83">&#182;</a></h2><p><a href="https://zhuanlan.zhihu.com/p/133449879">https://zhuanlan.zhihu.com/p/133449879</a></p>
+
 </div>
 </div>
 </div>
